--- a/app/src/main/res/layout/activity_order_address.xml
+++ b/app/src/main/res/layout/activity_order_address.xml
@@ -58,12 +58,13 @@
     <TextView
         android:id="@+id/textView20"
         android:layout_width="0dp"
-        android:layout_height="57dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/nimbusbol"
         android:text="Ingrese alguna observacion para el domiciliario( este campo no es obligatorio)"
+        android:textAlignment="center"
         android:textColor="@color/negro"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,18 +75,22 @@
     <EditText
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="0dp"
-        android:layout_height="76dp"
+        android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/btn_style2"
         android:ems="10"
         android:fontFamily="@font/nimbusregita"
+        android:gravity="top"
         android:hint="  Descripcion para el domiciliario "
-        android:inputType="textPersonName"
+        android:inputType="text|textImeMultiLine"
+        android:padding="10sp"
         android:textColor="#090909"
         android:textColorHint="#6C6A6A"
         android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_continuar_direccion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,14 +98,14 @@
 
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_continuar_direccion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/btn_style1"
-        android:text="Agregar direccón "
+        android:text="Continuar"
         android:textColor="@color/blanco"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
