--- a/app/src/main/res/layout/frafment_car.xml
+++ b/app/src/main/res/layout/frafment_car.xml
@@ -93,7 +93,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintTop_toBottomOf="@+id/btn_continuar_direccion"
         app:layout_constraintVertical_bias="1.0"
         app:menu="@menu/bottom_navigation"
         tools:layout_editor_absoluteX="0dp">
@@ -101,7 +101,7 @@
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_continuar_direccion"
         android:layout_width="355dp"
         android:layout_height="52dp"
         android:layout_marginBottom="104dp"
