--- a/app/src/main/res/layout/fragmen_map.xml
+++ b/app/src/main/res/layout/fragmen_map.xml
@@ -15,7 +15,7 @@
         android:text="Ingrese direcion o selecione en el anterior mapa"
         android:textColor="@color/negro"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toTopOf="@+id/btn_continuar_direccion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.367"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         android:text="Ingrese alguna observacion para el domiciliario( este campo no es obligatorio)"
         android:textColor="@color/negro"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toTopOf="@+id/btn_continuar_direccion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.337"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +65,7 @@
         android:text="  Descripcion para el domiciliario "
         android:textColor="#807979"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toTopOf="@+id/btn_continuar_direccion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.344"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
         app:layout_constraintVertical_bias="0.423" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_continuar_direccion"
         android:layout_width="371dp"
         android:layout_height="64dp"
         android:layout_marginBottom="108dp"
@@ -120,7 +120,7 @@
         android:fontFamily="@font/nimbusbol"
         android:text="Buscar"
         android:textColor="@color/blanco"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toTopOf="@+id/btn_continuar_direccion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.273"
         app:layout_constraintStart_toEndOf="@+id/direcion_envio"
