--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -63,7 +63,7 @@
         app:srcCompat="@drawable/ic_button_back" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_continuar_direccion"
         android:layout_width="371dp"
         android:layout_height="64dp"
         android:layout_marginBottom="40dp"
@@ -96,7 +96,7 @@
         android:text="Parrillada de tres carne  "
         android:textColor="@color/negro"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toTopOf="@+id/btn_continuar_direccion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.187"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +125,7 @@
         android:fontFamily="@font/nimbusregita"
         android:text="Carne de res, pechuga de pollo, costilla de cerdo, papa criolla, morcillas, chorizos, rodajas de plátano, croquetas de yuca y papas a la francesa."
         android:textColor="@color/negro"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintBottom_toTopOf="@+id/btn_continuar_direccion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.305"
         app:layout_constraintStart_toStartOf="parent"
