--- a/app/src/main/res/layout/activity_order_address.xml
+++ b/app/src/main/res/layout/activity_order_address.xml
@@ -19,17 +19,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_baseline_my_location_24" />
 
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/nimbusbol"
         android:text="Dirección"
         android:textColor="@color/negro"
-        android:textSize="16sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.316"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,19 +39,19 @@
     <EditText
         android:id="@+id/et_direccion_envio"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="35dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/btn_style2"
         android:ems="10"
-        android:fontFamily="@font/nimbusregita"
+        android:textSize="13sp"
+        android:fontFamily="@font/nimbusreg"
         android:hint=" calle **  #**-**  Barrio,conjunto "
         android:inputType="textPersonName"
+        android:padding="5dp"
         android:textColor="#000000"
-        android:textColorHighlight="#0B0909"
         android:textColorHint="#8C8A8A"
-        android:textColorLink="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -60,36 +61,36 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/nimbusbol"
         android:text="Ingrese alguna observacion para el domiciliario( este campo no es obligatorio)"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="@color/negro"
-        android:textSize="16sp"
+        android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.36"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_direccion_envio" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/et_observaciones"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/btn_style2"
         android:ems="10"
-        android:fontFamily="@font/nimbusregita"
+        android:fontFamily="@font/nimbusreg"
         android:gravity="top"
-        android:hint="  Descripcion para el domiciliario "
+        android:hint="Frente a una casa azul; Mi casa tiene puertas rojas..."
         android:inputType="text|textImeMultiLine"
         android:padding="10sp"
         android:textColor="#090909"
         android:textColorHint="#6C6A6A"
-        android:textSize="18sp"
+        android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_continuar_direccion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.363"
@@ -114,14 +115,27 @@
 
     <FrameLayout
         android:id="@+id/conatiner_act"
-        android:layout_width="match_parent"
-        android:layout_height="298dp"
+        android:layout_width="0dp"
+        android:layout_height="366dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
 
     </FrameLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/btn_style1"
+        android:padding="10dp"
+        android:text="Escribe o toca en la Dirección 😀"
+        android:textColor="@color/blanco"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
