--- a/app/src/main/res/layout/fragment_detail_products.xml
+++ b/app/src/main/res/layout/fragment_detail_products.xml
@@ -176,7 +176,7 @@
         app:layout_constraintVertical_bias="0.578" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/image_delete"
         android:layout_width="366dp"
         android:layout_height="164dp"
         android:background="@drawable/background"
