creacion de la clase para hacer el llamado a la categoria por medio gson
 Conflicts:
	app/src/main/java/com/unicauca/domifoods/LoginActivity.java
	app/src/main/java/com/unicauca/domifoods/apiUser/ApiUser.java

--- a/app/src/main/res/layout/fragment_shoppingcar.xml
+++ b/app/src/main/res/layout/fragment_shoppingcar.xml
@@ -8,6 +8,20 @@
     tools:context=".fragments.ShoppingcarFragment">
 
 
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/nimbusbolta"
+        android:text="Empty List"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/menu_options_nav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RecyclerCar"
         android:layout_width="match_parent"
