--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -125,9 +125,10 @@
         android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toTopOf="@+id/menu_options_nav"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8"
+        app:layout_constraintVertical_bias="1.0" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/menu_options_nav"
