--- a/app/src/main/res/layout/fragment_shoppingcar.xml
+++ b/app/src/main/res/layout/fragment_shoppingcar.xml
@@ -41,7 +41,7 @@
         android:layout_marginBottom="56dp"
         android:layout_weight="3"
         android:background="@drawable/btn_style1"
-        android:text="Volver"
+        android:text="Descripción"
         android:textColor="@drawable/txt_btn_style2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
