--- a/app/src/main/res/layout/list_products.xml
+++ b/app/src/main/res/layout/list_products.xml
@@ -11,14 +11,41 @@
     app:cardUseCompatPadding="true"
     tools:context=".fragments.ShoppingcarFragment">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/view_backgraund"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="#f44336">
+
+        <ImageView
+            android:id="@+id/delete_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic__delete" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_toStartOf="@+id/delete_icon"
+            android:layout_toLeftOf="@+id/delete_icon"
+            android:text="ELIMINAR"
+            android:textColor="#fff"
+            android:textSize="13dp" />
+
+    </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/rl"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="95dp"
+            android:background="#fff"
+            android:clickable="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -148,7 +175,6 @@
 
         </RelativeLayout>
 
-    </LinearLayout>
 
 
 </androidx.cardview.widget.CardView>
