--- a/app/src/main/res/layout/fragment_detail_products.xml
+++ b/app/src/main/res/layout/fragment_detail_products.xml
@@ -11,22 +11,20 @@
 
     <ImageView
         android:id="@+id/img_restaurant_product_bg"
-        android:layout_width="403dp"
-        android:layout_height="145dp"
+        android:layout_width="428dp"
+        android:layout_height="127dp"
+        android:layout_marginTop="4dp"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/background" />
+        app:srcCompat="@drawable/blackground_produc" />
 
     <TextView
         android:id="@+id/tv_restaurants"
-        android:layout_width="393dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="160dp"
+        android:layout_width="420dp"
+        android:layout_height="65dp"
         android:background="#FF0F03"
         android:fontFamily="@font/comickings"
         android:letterSpacing="0.1"
@@ -36,33 +34,33 @@
         android:textColor="#ffffff"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.68"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/img_restaurant_product_bg" />
 
     <ImageView
         android:id="@+id/img_restaurant_icon"
         android:layout_width="126dp"
         android:layout_height="90dp"
-        android:layout_marginTop="64dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.46"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/img_restaurant_product_bg"
+        app:layout_constraintHorizontal_bias="0.408"
+        app:layout_constraintStart_toStartOf="@+id/img_restaurant_product_bg"
+        app:layout_constraintTop_toTopOf="@+id/img_restaurant_product_bg"
         app:srcCompat="@drawable/ic_deliveryman" />
 
-    <ImageView
-        android:id="@+id/img_salir"
-        android:layout_width="59dp"
-        android:layout_height="49dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:clickable="true"
+    <Button
+        android:id="@+id/btn_add_shopping_cart"
+        android:layout_width="961dp"
+        android:layout_height="67dp"
+        android:background="@drawable/btn_style1"
+        android:text="Agregar al carrito de compras"
+        android:textColor="@color/blanco"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_button_back" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_description" />
 
-    <!--
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/menu_options_nav"
         android:layout_width="0dp"
@@ -73,117 +71,87 @@
         app:menu="@menu/bottom_navigation">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
--->
-    <Button
-        android:id="@+id/btn_add_shopping_cart"
-        android:layout_width="371dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/btn_style1"
-        android:text="Agregar al carrito de compras"
-        android:textColor="@color/blanco"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/img_restaurant_product_bg"
-        app:layout_constraintVertical_bias="0.912" />
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="272dp"
+        android:layout_width="396dp"
         android:layout_height="26dp"
-        android:layout_marginBottom="96dp"
         android:fontFamily="@font/nimbusbol"
         android:text="Parrillada de tres carne  "
         android:textColor="@color/negro"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_continuar_direccion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.273"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_precio" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
         android:id="@+id/tv_precio"
-        android:layout_width="107dp"
-        android:layout_height="23dp"
+        android:layout_width="383dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/nimbusbol"
         android:text="$ 20.000"
         android:textColor="@color/negro"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.115"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.593" />
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <TextView
         android:id="@+id/tv_description"
-        android:layout_width="293dp"
-        android:layout_height="78dp"
-        android:layout_marginTop="436dp"
+        android:layout_width="385dp"
+        android:layout_height="121dp"
         android:fontFamily="@font/nimbusregita"
         android:text="Carne de res, pechuga de pollo, costilla de cerdo, papa criolla, morcillas, chorizos, rodajas de plátano, croquetas de yuca y papas a la francesa."
         android:textColor="@color/negro"
-        app:layout_constraintBottom_toTopOf="@+id/btn_continuar_direccion"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.254"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        app:layout_constraintVertical_bias="0.493" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_precio" />
 
     <Button
         android:id="@+id/btn_minus"
-        android:layout_width="19dp"
-        android:layout_height="26dp"
+        android:layout_width="24dp"
+        android:layout_height="25dp"
         android:background="@drawable/icon_minus"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.655"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.58" />
+        app:layout_constraintBottom_toBottomOf="@+id/tv_precio"
+        app:layout_constraintStart_toEndOf="@+id/quantity_of_products"
+        app:layout_constraintTop_toBottomOf="@+id/textView14"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/quantity_of_products"
-        android:layout_width="32dp"
-        android:layout_height="40dp"
+        android:layout_width="46dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="4dp"
         android:text="1"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@color/negro"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.728"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.583" />
+        app:layout_constraintStart_toEndOf="@+id/btn_add"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <Button
         android:id="@+id/btn_add"
-        android:layout_width="21dp"
+        android:layout_width="28dp"
         android:layout_height="24dp"
+        android:layout_marginStart="248dp"
         android:background="@drawable/icon_plus"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.797"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.578" />
+        app:layout_constraintBottom_toBottomOf="@+id/tv_precio"
+        app:layout_constraintStart_toStartOf="@+id/tv_precio"
+        app:layout_constraintTop_toBottomOf="@+id/textView14"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
-        android:id="@+id/image_delete"
-        android:layout_width="366dp"
+        android:id="@+id/imageView4"
+        android:layout_width="358dp"
         android:layout_height="164dp"
-        android:background="@drawable/background"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/plato_parrillada"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.222"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.378" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_restaurants" />
 </androidx.constraintlayout.widget.ConstraintLayout>
